<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_line_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_line_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_baseball_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_filter_search"/>

        <Button
            android:id="@+id/bt_filter_search"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/baseball_filter_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_baseball_search"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_line_2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cl_line_1"
        app:layout_constraintBottom_toTopOf="@id/cl_line_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/sp_baseball_league"
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sp_baseball_year"/>

        <Spinner
            android:id="@+id/sp_baseball_year"
            android:layout_width="75dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/sp_baseball_league"
            app:layout_constraintEnd_toStartOf="@id/sp_baseball_team"/>

        <Spinner
            android:id="@+id/sp_baseball_team"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/sp_baseball_year"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_line_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cl_line_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_weather_title_none"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_weather_none"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cb_weather_none"/>

        <CheckBox
            android:id="@+id/cb_weather_none"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weather_title_none"
            app:layout_constraintEnd_toStartOf="@id/tv_weather_title_sun"/>

        <TextView
            android:id="@+id/tv_weather_title_sun"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_weather_sun"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_weather_none"
            app:layout_constraintEnd_toStartOf="@id/cb_weather_sun"/>

        <CheckBox
            android:id="@+id/cb_weather_sun"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weather_title_sun"
            app:layout_constraintEnd_toStartOf="@id/tv_weather_title_cloud"/>

        <TextView
            android:id="@+id/tv_weather_title_cloud"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_weather_cloud"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_weather_sun"
            app:layout_constraintEnd_toStartOf="@id/cb_weather_cloud"/>

        <CheckBox
            android:id="@+id/cb_weather_cloud"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weather_title_cloud"
            app:layout_constraintEnd_toStartOf="@id/tv_weather_title_rain"/>

        <TextView
            android:id="@+id/tv_weather_title_rain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_weather_rain"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_weather_cloud"
            app:layout_constraintEnd_toStartOf="@id/cb_weather_rain"/>

        <CheckBox
            android:id="@+id/cb_weather_rain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weather_title_rain"
            app:layout_constraintEnd_toStartOf="@id/tv_weather_title_snow"/>

        <TextView
            android:id="@+id/tv_weather_title_snow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_weather_snow"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_weather_rain"
            app:layout_constraintEnd_toStartOf="@id/cb_weather_snow"/>

        <CheckBox
            android:id="@+id/cb_weather_snow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weather_title_snow"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>