<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/color_black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_team_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_team_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title_strength"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_strength"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title_punch"/>

        <TextView
            android:id="@+id/tv_title_punch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_punch"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_strength"
            app:layout_constraintEnd_toStartOf="@id/tv_title_speed"/>

        <TextView
            android:id="@+id/tv_title_speed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_speed"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_punch"
            app:layout_constraintEnd_toStartOf="@id/tv_title_pass"/>

        <TextView
            android:id="@+id/tv_title_pass"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_pass"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_speed"
            app:layout_constraintEnd_toStartOf="@id/tv_title_defence"/>

        <TextView
            android:id="@+id/tv_title_defence"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_defence"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_pass"
            app:layout_constraintEnd_toStartOf="@id/tv_title_control"/>

        <TextView
            android:id="@+id/tv_title_control"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_control"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_defence"
            app:layout_constraintEnd_toStartOf="@id/tv_title_fast"/>

        <TextView
            android:id="@+id/tv_title_fast"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_fast"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_control"
            app:layout_constraintEnd_toStartOf="@id/tv_title_breaking"/>

        <TextView
            android:id="@+id/tv_title_breaking"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/baseball_breaking"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_baseball_title"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_fast"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_team_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_team_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_value_strength"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_value_punch"/>

        <TextView
            android:id="@+id/tv_value_punch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_strength"
            app:layout_constraintEnd_toStartOf="@id/tv_value_speed"/>

        <TextView
            android:id="@+id/tv_value_speed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_punch"
            app:layout_constraintEnd_toStartOf="@id/tv_value_pass"/>

        <TextView
            android:id="@+id/tv_value_pass"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_speed"
            app:layout_constraintEnd_toStartOf="@id/tv_value_defence"/>

        <TextView
            android:id="@+id/tv_value_defence"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_pass"
            app:layout_constraintEnd_toStartOf="@id/tv_value_control"/>

        <TextView
            android:id="@+id/tv_value_control"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_defence"
            app:layout_constraintEnd_toStartOf="@id/tv_value_fast"/>

        <TextView
            android:id="@+id/tv_value_fast"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_control"
            app:layout_constraintEnd_toStartOf="@id/tv_value_breaking"/>

        <TextView
            android:id="@+id/tv_value_breaking"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/color_white"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_value_fast"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>